@@ -154,6 +154,8 @@ HP ProCurve 3400cl Series    |    XX    |    --    |    XX    |    ??    |   ?? 
 -----------------------------|----------|----------|----------|----------|--------|
 HP ProCurve 4100 Series      |    XX    |    --    |    XX    |    ??    |   ??   |
 -----------------------------|----------|----------|----------|----------|--------|
+HP ProCurve 5400 Series      |    XX    |    --    |    XX    |    ??    |   ??   |
+-----------------------------|----------|----------|----------|----------|--------|
 Intel Express 460            |    XX    |    --    |    --    |    --    |   --   |
 -----------------------------|----------|----------|----------|----------|--------|
 Intel Express 530            |    XX    |    --    |    --    |    --    |   --   |
