@@ -17,6 +17,7 @@ For a list of compatibility related changes see the UPGRADE file.
 Version <release> released on <releaseDate>
 
 New Hardware Support
+ * HP ProCurve 5400 Series
 - AeroHIVE AP Access Points
 - Dlink DGS 3200 switch
 
